--- a/style.css
+++ b/style.css
@@ -4,3 +4,29 @@
 
   font-family: "Nunito", sans-serif;
 }
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  width: 100%;
+  height: 50px;
+
+  background-color: lightgoldenrodyellow;
+}
+
+.logo {
+  width: 50px;
+  max-width: 50px;
+}
+
+.menu {
+  font-size: 50px;
+}
+
+ul,
+li {
+  list-style: none;
+  font-size: 10px;
+}
