--- a/style.css
+++ b/style.css
@@ -42,3 +42,51 @@ li {
 .menuSymbol:hover .menuMobile {
   visibility: visible;
 }
+
+/* -------- MAIN ------------------------------ */
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.titleField,
+.titleText {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.titleField {
+  background-color: greenyellow;
+  margin: 25px;
+  width: 100%;
+  height: 175px;
+
+  justify-content: space-between;
+}
+
+.title {
+  font-size: 20px;
+  color: salmon;
+}
+
+.titleAdvice {
+  font-size: 50px;
+  font-weight: 800;
+}
+
+button {
+  width: 130px;
+  height: 50px;
+  border: none;
+  color: white;
+  background-color: tomato;
+  border-radius: 20px;
+  border-top-left-radius: 1px;
+  font-size: 15px;
+  font-weight: 800;
+}
