--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ main {
 }
 
 .titleField,
-.titleText {
+.titleText,
+.card {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -88,5 +89,42 @@ button {
   border-radius: 20px;
   border-top-left-radius: 1px;
   font-size: 15px;
+  font-weight: 800;
+}
+
+.card {
+  margin: 25px;
+  background-color: thistle;
+
+  height: 300px;
+  width: 600px;
+
+  position: relative;
+}
+
+.cardImg {
+  border-radius: 30px;
+
+  position: absolute;
+  background-color: thistle;
+}
+
+.cardTitle,
+.cardText {
+  position: absolute;
+  z-index: 10;
+
+  color: white;
+}
+
+.cardTitle {
+  bottom: 60px;
+  font-size: 15px;
+  font-weight: normal;
+}
+
+.cardText {
+  bottom: 25px;
+  font-size: 25px;
   font-weight: 800;
 }
