--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   width: 100%;
   height: 50px;
 
-  background-color: lightgoldenrodyellow;
+  box-shadow: 0px 1px 10px 0px rgba(90, 90, 90, 0.35);
 }
 
 .logo {
@@ -29,10 +29,6 @@ ul,
 li {
   list-style: none;
   font-size: 10px;
-}
-
-.menuSymbol {
-  background-color: lightseagreen;
 }
 
 .menuMobile {
