--- a/style.css
+++ b/style.css
@@ -6,12 +6,8 @@
 }
 
 .header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-
   width: 100%;
-  height: 50px;
+  height: 55px;
 
   box-shadow: 0px 1px 10px 0px rgba(90, 90, 90, 0.35);
 }
@@ -19,10 +15,24 @@
 .logo {
   width: 50px;
   max-width: 50px;
+  margin: 5px;
 }
 
-.menu {
+.navigation {
+  display: flex;
+  flex-direction: column;
+  width: 100px;
+  position: relative;
+}
+
+.menuSymbol {
+  color: black;
   font-size: 50px;
+  width: 100px;
+  height: 100%;
+
+  position: absolute;
+  z-index: 100;
 }
 
 ul,
@@ -31,13 +41,20 @@ li {
   font-size: 10px;
 }
 
-.menuMobile {
+.menuElements {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-right: 40px;
   visibility: hidden;
+
+  margin-top: 12px;
 }
 
-.menuSymbol:hover .menuMobile {
+.menuSymbol:hover + .menuElements {
   visibility: visible;
 }
+*/
 
 /* -------- MAIN ------------------------------ */
 
@@ -85,6 +102,13 @@ button {
   border-top-left-radius: 1px;
   font-size: 15px;
   font-weight: 800;
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .card {
